--- a/index.html
+++ b/index.html
@@ -1,80 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+
+<head>
 	<!-- ========== Meta Tags ========== -->
-    <meta charset="UTF-8">
-    <meta name="description" content="TedXcusat TEDxCUSAT -Event Html ">
-    <meta name="keywords" content="TedX, TedXCUSAT, CUSAT, TED CUSAT , Event , Html, ">
-    <meta name="author" content="TEDxCUSAT, CUSAT">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta property="og:image" content="images/og.png" />
-    <!-- ========== Title ========== --> 
-    <title>SPONSORSHIP|TEDxCUSAT</title>
-		
+	<meta charset="UTF-8">
+	<meta name="description" content="Take a look at our Partners ">
+	<meta name="keywords" content="TedX, TedXCUSAT, CUSAT, TED CUSAT , Event , Html, ">
+	<meta name="author" content="TEDxCUSAT, CUSAT">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta property="og:image" content="images/og.png" />
+	<!-- ========== Title ========== -->
+	<title>Partners | TEDxCUSAT</title>
+    <!-- ========== Favicon Ico ========== -->
+    <link rel="icon" type="image/ico" href="icon.png" />
 
-	<link rel="stylesheet" href="css/spons.css" type="text/css" />
+	<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/spons.css" type="text/css" />
 
-		
-		
-	</head>
-	<body>
+
+
+</head>
+
+<body>
 	<!--header starts here-->
-		<header>
-			<section class="wrapper">
-				<h1>
-					OUR SPONSERS
-				</h1>
-			</section>
-		</header>
+	<header>
+		<section class="wrapper">
+			<h1>OUR PARTNERS</h1>
+		</section>
+	</header>
 	<!--header ends here-->
 
 	<!--section main starts here-->
-		<section id="main">
-			<section class="content-item">
-				<section class="wrapper">
-					<img src="images/Hotel Beith.jpg" class="left">
-					<div class="right">
-						<h3>
-							BEITH
-							<br>
-							HOTEL
-						</h3>
-						<p>FOOD PARTNER</p>
-					</div>
-					<br class="clear">
-				</section>
-			</section>
-			<section class="content-item middle"><!--red section-->
-				<section class="wrapper">
-					<img src="images/RedTeam.jpg" class="right">
-					<div class="left">
-						<h3>
-							REDTEAM
-							<br>
-							HACKER
-							<br>
-							ACADEMY
-						</h3>
-						<p>TECHNOLOGY AND SECURITY PARTNER</p>
-					</div>
-					<br class="clear">
-				</section>
+	<section id="main">
+		<section class="content-item middle">
+			<!--red section-->
+			<section class="wrapper">
+				<img src="assets/img/partners/RedTeam.jpg" class="right">
+				<div class="left">
+					<h3>
+						REDTEAM HACKER ACADEMY
+					</h3>
+					<p>TECHNICAL AND SECURITY PARTNER</p>
+					<p>RedTeam Hacker Academy is a Premium Cybersecurity and Ethical Hacking training center in Kerala. </p>
+					<p>Master your skills in Cybersecurity and Defence through RedTeam</p>
+				</div>
+				<br class="clear">
 			</section>
 		</section>
-		<!--section main ends here-->
+		<section class="content-item">
+			<section class="wrapper">
+				
+				<img src="assets/img/partners/Hotel Beith.jpg" class="left">
+				<div class="right">
+					<h3>
+						BEITH HOTEL
+					</h3>
+					<p>FOOD PARTNER</p>
+				</div>
+				<br class="clear">
+			</section>
+		</section>
+	</section>
+	<!--section main ends here-->
 
-		<!--footer starts here-->
-		<footer>
-			<section id="top">
-				<section class="wrapper">
-					<button class="move">
-						<a href="#">BACK</a>
-					</button>
-				</section>
+	<!--footer starts here-->
+	<footer>
+		<section id="top">
+			<section class="wrapper">
+				<button class="move">
+					<a href="index.html">BACK</a>
+				</button>
 			</section>
-			<section id="bottom">
-				<p>This independent TEDx event is operated under license from TED.</p>
-			</section>
-		</footer>
-		 </body>
-		 </html>
+		</section>
+		<section id="bottom">
+			<p>This independent TEDx event is operated under license from TED.</p>
+		</section>
+	</footer>
+</body>
+
+</html>
