--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/ico" href="icon.png" />
 
 	<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/spons.css" type="text/css" />
+	<link rel="stylesheet" href="css/spons.css" type="text/css" />
 
 
 
