--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- ========== Favicon Ico ========== -->
     <link rel="icon" type="image/ico" href="icon.png" />
 
-	<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans&display=swap" rel="stylesheet">
+	<link href="c" rel="stylesheet">
 	<link rel="stylesheet" href="css/spons.css" type="text/css" />
 
 
@@ -35,7 +35,7 @@
 		<section class="content-item middle">
 			<!--red section-->
 			<section class="wrapper">
-				<img src="assets/img/partners/RedTeam.jpg" class="right">
+				<img src="images/RedTeam.jpg" class="right">
 				<div class="left">
 					<h3>
 						REDTEAM HACKER ACADEMY
@@ -50,7 +50,7 @@
 		<section class="content-item">
 			<section class="wrapper">
 				
-				<img src="assets/img/partners/Hotel Beith.jpg" class="left">
+				<img src="imgages/Hotel Beith.jpg" class="left">
 				<div class="right">
 					<h3>
 						BEITH HOTEL
