--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<section class="content-item">
 			<section class="wrapper">
 				
-				<img src="imgages/Hotel Beith.jpg" class="left">
+				<img src="images/Hotel Beith.jpg" class="left">
 				<div class="right">
 					<h3>
 						BEITH HOTEL
