--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
 				<img src="images/RedTeam.jpg" class="right">
 				<div class="left">
 					<h3>
-						REDTEAM HACKER ACADEMY
+						TECHNICAL AND SECURITY PARTNER
 					</h3>
-					<p>TECHNICAL AND SECURITY PARTNER</p>
 					<p>RedTeam Hacker Academy is a Premium Cybersecurity and Ethical Hacking training center in Kerala. </p>
 					<p>Master your skills in Cybersecurity and Defence through RedTeam</p>
 				</div>
@@ -53,9 +52,8 @@
 				<img src="images/Hotel Beith.jpg" class="left">
 				<div class="right">
 					<h3>
-						BEITH HOTEL
+						FOOD PARTNER
 					</h3>
-					<p>FOOD PARTNER</p>
 				</div>
 				<br class="clear">
 			</section>
