--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 					<h3>
 						TECHNICAL AND SECURITY PARTNER
 					</h3>
-					<p>RedTeam Hacker Academy is a Premium Cybersecurity and Ethical Hacking training center in Kerala. </p>
-					<p>Master your skills in Cybersecurity and Defence through RedTeam</p>
+					<p>RedTeam Hacker Academy is a Premium Cybersecurity and Ethical Hacking training center in Kerala.Master your skills in Cybersecurity and Defence through RedTeam</p>
 				</div>
 				<br class="clear">
 			</section>
