--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 				<img src="images/RedTeam.jpg" class="right">
 				<div class="left">
 					<h3>
-						TECHNICAL AND SECURITY PARTNER
+						TECHNICAL & SECURITY PARTNER
 					</h3>
-					<p>RedTeam Hacker Academy is a Premium Cybersecurity and Ethical Hacking training center in Kerala.Master your skills in Cybersecurity and Defence through RedTeam</p>
+					<p>RedTeam Hacker Academy is a Premium Cybersecurity and Ethical Hacking training center in Kerala.</p>
+					<p>Master your skills in Cybersecurity and Defence through RedTeam.</p>
 				</div>
 				<br class="clear">
 			</section>
