--- a/index.html
+++ b/index.html
@@ -32,8 +32,19 @@
 
 	<!--section main starts here-->
 	<section id="main">
+		<section class="content-item">
+			<section class="wrapper">
+				<img src="images/v-guard.jpg" class="left">
+				<div class="right">
+					<h3>
+						POWERED BY
+					</h3>
+				</div>
+				<br class="clear">
+			</section>
+		</section>
 		<section class="content-item middle">
-			<!--red section-->
+			<!--white section-->
 			<section class="wrapper">
 				<img src="images/RedTeam.jpg" class="right">
 				<div class="left">
