--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
 	<!--section main starts here-->
 	<section id="main">
 		<section class="content-item">
+			<!--white section-->
 			<section class="wrapper">
-				<img src="images/v-guard.jpg" class="left">
-				<div class="right">
+				<img src="images/v-guard.jpg" class="right">
+				<div class="left">
 					<h3>
 						POWERED BY
 					</h3>
+					<p>RedTeam Hacker Academy is a Premium Cybersecurity and Ethical Hacking training center in Kerala.</p>
+					<p>Master your skills in Cybersecurity and Defence through RedTeam.</p>
 				</div>
 				<br class="clear">
 			</section>
