--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<section class="content-item">
 			<!--white section-->
 			<section class="wrapper">
-				<img src="images/v-guard.jpg" class="right">
+				<img src="images/v-guardnew.jpg" class="right">
 				<div class="left">
 					<h3>
 						POWERED BY
@@ -49,8 +49,8 @@
 		<section class="content-item middle">
 			<!--white section-->
 			<section class="wrapper">
-				<img src="images/RedTeam.jpg" class="right">
-				<div class="left">
+				<img src="images/RedTeam.jpg" class="left">
+				<div class="right">
 					<h3>
 						TECHNICAL & SECURITY PARTNER
 					</h3>
@@ -63,8 +63,8 @@
 		<section class="content-item">
 			<section class="wrapper">
 				
-				<img src="images/Hotel Beith.jpg" class="left">
-				<div class="right">
+				<img src="images/Hotel Beith.jpg" class="right">
+				<div class="left">
 					<h3>
 						FOOD PARTNER
 					</h3>
