--- a/index.html
+++ b/index.html
@@ -35,13 +35,11 @@
 		<section class="content-item">
 			<!--white section-->
 			<section class="wrapper">
-				<img src="images/v-guardnew.jpg" class="right">
+				<img src="images/v-guard.jpg" class="right">
 				<div class="left">
 					<h3>
 						POWERED BY
 					</h3>
-					<p>RedTeam Hacker Academy is a Premium Cybersecurity and Ethical Hacking training center in Kerala.</p>
-					<p>Master your skills in Cybersecurity and Defence through RedTeam.</p>
 				</div>
 				<br class="clear">
 			</section>
@@ -49,8 +47,8 @@
 		<section class="content-item middle">
 			<!--white section-->
 			<section class="wrapper">
-				<img src="images/RedTeam.jpg" class="left">
-				<div class="right">
+				<img src="images/RedTeam.jpg" class="right">
+				<div class="left">
 					<h3>
 						TECHNICAL & SECURITY PARTNER
 					</h3>
@@ -63,8 +61,8 @@
 		<section class="content-item">
 			<section class="wrapper">
 				
-				<img src="images/Hotel Beith.jpg" class="right">
-				<div class="left">
+				<img src="images/Hotel Beith.jpg" class="left">
+				<div class="right">
 					<h3>
 						FOOD PARTNER
 					</h3>
