--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		<section class="content-item middle">
 			<!--white section-->
 			<section class="wrapper">
-				<img src="images/RedTeam.jpg" class="right">
-				<div class="left">
+				<img src="images/RedTeam.jpg" class="left">
+				<div class="right">
 					<h3>
 						TECHNICAL & SECURITY PARTNER
 					</h3>
@@ -61,8 +61,8 @@
 		<section class="content-item">
 			<section class="wrapper">
 				
-				<img src="images/Hotel Beith.jpg" class="left">
-				<div class="right">
+				<img src="images/Hotel Beith.jpg" class="right">
+				<div class="left">
 					<h3>
 						FOOD PARTNER
 					</h3>
