--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<!--section main starts here-->
 	<section id="main">
-		<section class="content-item">
+		<section class="content-item vg">
 			<!--white section-->
 			<section class="wrapper">
 				<img src="images/v-guard.jpg" class="right">
