--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
 	<!--section main starts here-->
 	<section id="main">
-		<section class="content-item vg">
+		<section class="content-item">
 			<!--white section-->
 			<section class="wrapper">
 				<img src="images/v-guard.jpg" class="right">
-				<div class="left">
+				<div class="left vg">
 					<h3>
 						POWERED BY
 					</h3>
