--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<section class="content-item">
 			<!--white section-->
 			<section class="wrapper">
-				<div class="left vg">
+				<div class="left">
 					<h3>
 						POWERED BY
 					</h3>
